# django-salesforce-oauth

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
django_salesforce_oauth/: apps.py  oauth.py  urls.py  utils.py  views.py
example_project/frontend/: callback.py  urls.py
example_project/frontend/templates/: index.html
example_project/project/: settings.py  urls.py
tests/: test_django_salesforce_oauth.py
