[tool.poetry]
name = "django-salesforce-oauth"
version = "0.1.0"
description = ""
authors = ["Alex Drozd <drozdster@gmail.com>"]
packages = [
    { include = "django_salesforce_oauth" }
]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
